migrate on AppFeaturesPkg instead of project own realizations

--- a/bin/lang/uTerminal-win64-Release.en.po
+++ b/bin/lang/uTerminal-win64-Release.en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uterminal\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-04-02 21:34+0300\n"
+"PO-Revision-Date: 2025-04-05 14:41+0300\n"
 "Last-Translator: \n"
 "Language-Team: English\n"
 "Language: en_US\n"
@@ -2067,11 +2067,11 @@ msgstr ""
 
 #: u_common.warn_reset
 msgid ""
-"При следующем запуске приложения будут загружены\n"
-"настройки по умолчанию. Продолжить?"
+"Приложение будет закрыто, а текущие настройки вернутся к значениям по умолчанию.\n"
+"Вы действительно хотите сбросить настройки?"
 msgstr ""
-"Default settings will be loaded when application\n"
-"is launched next time. Continue?"
+"The application will be closed and the current settings will return to their default values.\n"
+"Do you really want to reset the settings?"
 
 #: u_common.warn_settings
 msgid ""
