--- a/bin/lang/uTerminal-win64-Release.uk_UA.po
+++ b/bin/lang/uTerminal-win64-Release.uk_UA.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uterminal\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-04-02 21:36+0300\n"
+"PO-Revision-Date: 2025-04-08 18:32+0300\n"
 "Last-Translator: \n"
 "Language-Team: Ukrainian\n"
 "Language: uk_UA\n"
@@ -2067,11 +2067,11 @@ msgstr ""
 
 #: u_common.warn_reset
 msgid ""
-"При следующем запуске приложения будут загружены\n"
-"настройки по умолчанию. Продолжить?"
+"Приложение будет закрыто, а текущие настройки вернутся к значениям по умолчанию.\n"
+"Вы действительно хотите сбросить настройки?"
 msgstr ""
-"Під час наступного запуску програми буде завантажено\n"
-"налаштування за замовчуванням. Продовжити?"
+"Програму буде завершено, а поточні налаштування будуть скинуті до\n"
+"значень за замовчуванням. Ви справді бажаєте скинути налаштування?"
 
 #: u_common.warn_settings
 msgid ""
