--- a/bin/lang/uTerminal-win64-Release.pot
+++ b/bin/lang/uTerminal-win64-Release.pot
@@ -2006,8 +2006,8 @@ msgstr ""
 
 #: u_common.warn_reset
 msgid ""
-"При следующем запуске приложения будут загружены\n"
-"настройки по умолчанию. Продолжить?"
+"Приложение будет закрыто, а текущие настройки вернутся к значениям по умолчанию.\n"
+"Вы действительно хотите сбросить настройки?"
 msgstr ""
 
 #: u_common.warn_settings
